[build-system]
requires = ["maturin>=1.7,<1.8"]
build-backend = "maturin"

[project]
name = "mizu"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://tuna2134.github.io/mizu"
"Source Code" = "https://github.com/tuna2134/mizu"
